--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         content="shreyas patil, shreyas, patil, shreyaspatil, patil shreyas, patilshreyas, android developer, web developer, shreyaspatil99, shreyas sharad patil, androiddev, shreyaspatil99, ssp">
     <META name="description"
         content="Official Website of Shreyas Sharad Patil. Android Developer, Web Developer, Open Source Enthusiast.">
-    <link rel="shortcut icon" href="Images/profile.jpg" type="image/jpeg" />
+    <link rel="shortcut icon" href="Images/hero-headshot.webp" type="image/jpeg" />
     <link rel="canonical" href="https://shreyaspatil.dev/" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,7 +33,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-    <meta property="og:title" content="Shreyas Patil - Android Developer, Web Developer">
+    <meta property="og:title" content="Kapirath Raina - Android Developer, Software Developer">
     <meta property="og:image"
         content="https://github.com/PatilShreyas/PatilShreyas.github.io/raw/master/Images/profile.jpg">
 </head>
