--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
 
     <!-- Home Section START -->
     <section id="home" style="margin-top: 0%; padding-top: 60px;">
-        <img id="tilt" class="rounded-circle d-block mx-auto m-3" src="Images/profile.png" height="256" width="256"
+        <img id="tilt" class="rounded-circle d-block mx-auto m-3" src="Images/hero-headshot.webp" height="256" width="256"
             data-aos="zoom-in-up">
-        <div class="h2 mt-2 text-center" style="color: #FFFFFF">Shreyas Sharad Patil</div>
+        <div class="h2 mt-2 text-center" style="color: #FFFFFF">Kapirath Raina</div>
 
         <div class="cd-intro m-3 text-center">
             <h4 class="cd-headline slide">
                 <span class="cd-words-wrapper" style="width:200px !important">
-                    <b class="is-visible">❤️ Android</b>
-                    <b>✈️ Kotlin</b>
+                    <b class="is-visible">❤️ JAVA</b>
+                    <b>✈️ SQL</b>
                     <b>😍 Open Source</b>
-                    <b>🔥 Firebase</b>
+                    <b>MONGODB</b>
                     <b>👨🏻‍💻 Enthusiast</b>
                     <b>✍️ Technical</b>
                     <b>🇮🇳 Indian</b>
