--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
 
         <div class="d-flex align-items-center">
-            <a href="https://drive.google.com/file/d/1RMyErD4VNG2IhoHghwugXm0PGAxcGL0m/view?usp=sharing"
+            <a href="https://drive.google.com/file/d/108sfrjZGI8lw87F2f2d7oIyQ-ONtKWfS/view?usp=drive_link"
                 class="btn btn-outline-light d-block mx-auto m-4" target="_blank" role="button"><i
                     class="fas fa-file mr-2"></i>
                 View CV</a>
