--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
         <div class="cd-intro m-3 text-center">
             <h4 class="cd-headline slide">
                 <span class="cd-words-wrapper" style="width:200px !important">
-                    <b class="is-visible">❤️ JAVA</b>
-                    <b>✈️ SQL</b>
-                    <b>😍 Open Source</b>
+                    <b class="is-visible">JAVA</b>
+                    <b>SQL</b>
+                    <b>Open Source</b>
                     <b>MONGODB</b>
                     <b>👨🏻‍💻 Enthusiast</b>
                     <b>✍️ Technical</b>
-                    <b>🇮🇳 Indian</b>
+                    <b>🇮🇳</b>
                 </span>
             </h4>
         </div>
@@ -101,23 +101,15 @@
 
         <div class="container-fluid d-block mx-auto text-center" style="width:fit-content;" data-aos="fade-up"
             data-aos-anchor-placement="top-bottom">
-            <a href="mailto: hi@shreyaspatil.dev" href="#" class="far fa-envelope rounded-circle"></a>
-            <a href="https://www.facebook.com/shreyaspatil99" target="_blank"
-                class="fab fa-facebook-f rounded-circle"></a>
-            <a href="https://twitter.com/imShreyasPatil" target="_blank"
+            <a href="mailto: kapirathraina@gmail.com" href="#" class="far fa-envelope rounded-circle"></a>
+            <a href="https://x.com/kapsayshieeee" target="_blank"
                 class="fab fa-twitter rounded-circle"></a>
-            <a href="https://instagram.com/shreyaspatil.dev/" target="_blank"
+            <a href="https://www.instagram.com/ignaciowestttkappp/" target="_blank"
                 class="fab fa-instagram rounded-circle"></a>
-            <a href="https://www.linkedin.com/in/patil-shreyas" target="_blank"
+            <a href="https://www.linkedin.com/in/kapirath-raina/" target="_blank"
                 class="fab fa-linkedin-in rounded-circle"></a>
-            <a href="https://github.com/PatilShreyas" target="_blank"
+            <a href="https://github.com/kapirath28" target="_blank"
                 class="fab fa-github-alt rounded-circle"></a>
-            <a href="https://play.google.com/store/apps/dev?id=7315706573700759915" target="_blank"
-                class="fab fa-google-play rounded-circle"></a>
-            <a href="https://medium.com/@patilshreyas" target="_blank"
-                class="fab fa-medium-m rounded-circle"></a>
-            <a href="https://blog.shreyaspatil.dev" target="_blank"
-            class="fas fab fa-blog rounded-circle"></a>
         </div>
     </section>
     <!-- Home Section END -->
