--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <title>Shreyas Patil - Android Developer, Web Developer</title>
     <META name="keywords"
-        content="shreyas patil, shreyas, patil, shreyaspatil, patil shreyas, patilshreyas, android developer, web developer, shreyaspatil99, shreyas sharad patil, androiddev, shreyaspatil99, ssp">
+        content="kapirath raina, kapirath, raina, kapirath, raina kapirath, rainakapirath, java developer, web developer, KapirathRaina, KAPIRATH RAINA, androiddev, kap">
     <META name="description"
-        content="Official Website of Shreyas Sharad Patil. Android Developer, Web Developer, Open Source Enthusiast.">
-    <link rel="shortcut icon" href="Images/hero-headshot.webp" type="image/jpeg" />
-    <link rel="canonical" href="https://shreyaspatil.dev/" />
+        content="Official Website of Kapirath Raina.  Developer, Web Developer, Open Source Enthusiast.">
+    <link rel="shortcut icon" href="Images/hero-headshot.webp" type="Images/hero-headshot.webp" />
+    <link rel="canonical" href="https://kapirath28.github.io/portfoliowannabe2/" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -40,7 +40,7 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
     <nav id="myNavbar" class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <a class="navbar-brand" href="index.html">Shreyas Patil</a>
+        <a class="navbar-brand" href="index.html">Kapirath Raina</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -121,10 +121,10 @@
             </div>
             <div class="d-flex align-items-center">
                 <div class="p text-monospace d-block mx-auto p-4 larger align-self-center" data-aos="zoom-in-down">
-                    I'm Google Developer Expert for Android with several applications released onto
-                    Google Play Store. <br>
-                    I am self taught developer and make apps, libraries/APIs under Developer Name: <a
-                        href="https://www.facebook.com/spdroid/">SPDroid</a>.<br>
+                    A highly motivated and adaptable individual seeking an entry-level position in a dynamic
+organization where I can utilize my skills and education to contribute to team success and grow
+professionally. <br>
+                    I am self taught developer <br>
                     I spend a lot of my development time contributing to open-source projects. <br>
                     Most of it started by myself which can be found from my GitHub profile. <br>
                     I share my learnings by writing blogs, sharing posts on social media. <br>
