--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Shreyas Patil - Android Developer, Web Developer</title>
+    <title>Kapirath Raina - Developer </title>
     <META name="keywords"
         content="kapirath raina, kapirath, raina, kapirath, raina kapirath, rainakapirath, java developer, web developer, KapirathRaina, KAPIRATH RAINA, androiddev, kap">
     <META name="description"
