--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
             <div class="d-flex align-items-center">
                 <div class="p text-monospace d-block mx-auto p-4 larger align-self-center" data-aos="zoom-in-down">
                     A highly motivated and adaptable individual seeking an entry-level position in a dynamic
-organization where I can utilize my skills and education to contribute to team success and grow
-professionally. <br>
+                    organization where I can utilize my skills and education to contribute to team success and grow professionally. <br>
                     I am self taught developer <br>
                     I spend a lot of my development time contributing to open-source projects. <br>
                     Most of it started by myself which can be found from my GitHub profile. <br>
@@ -144,19 +143,19 @@ professionally. <br>
                     <div class="row">
                         <div class="col-auto">
                             <img class="img-responsive rounded m-2" style="background-color: #ffffff;"
-                                src="https://play-lh.googleusercontent.com/2tH3ybpe3Tb5y2vamr4s0IJ-ffW83ouOFl4qDeZ8qvKdil5OjMN5_kiQviniaIBz420=l64" width="64"
+                                src="https://media.licdn.com/dms/image/D4D0BAQGLJdIIdwmt5w/company-logo_200_200/0/1684849438022/coding_beyonds_logo?e=1731542400&v=beta&t=Z1PO4LrZyMsDXwBdX_apa-iV6JInKMsKCSLzHthvyig" width="64"
                                 height="64" />
                         </div>
                         <div class="col-auto">
-                            <div class="small" style="color: #b7b6bb">09/2021 - PRESENT</div>
-                            <div class="large font-weight-bold font-italic mt-2" style="color: #FFFFFF;">Senior Android Developer</div>
+                            <div class="small" style="color: #b7b6bb">Jan 2023 - Mar 2023</div>
+                            <div class="large font-weight-bold font-italic mt-2" style="color: #FFFFFF;">Intern</div>
                             <div class="large mt-2" style="color: #FFFFFF;"><a class="text-decoration-none"
-                                    href="https://paytm.com" target="_blank">Paytm</a></div>
-                            <div class="small" style="color: #b7b6bb">Mumbai, Maharashtra</div>
+                                    href="https://www.linkedin.com/company/coding-beyonds/" target="_blank">Coding Beyond</a></div>
+                            <div class="small" style="color: #b7b6bb">Pune, Maharashtra</div>
                         </div>
                     </div>
                 </li>
-                <li class="list-group-item">
+               /* <li class="list-group-item">  //
                     <div class="row">
                         <div class="col-auto">
                             <img class="img-responsive rounded m-2 pr-2 pl-2" style="background-color: #0eccd8;"
@@ -171,7 +170,7 @@ professionally. <br>
                             <div class="small" style="color: #b7b6bb">Pune, Maharashtra</div>
                         </div>
                     </div>
-                </li>
+                </li> */
             </ul>
         </div>
 
@@ -223,19 +222,19 @@ professionally. <br>
         <div class="d-flex align-items-center">
             <ul class="list-group p-3 mx-auto" data-aos="zoom-in-down">
                 <li class="list-group-item">
-                    <div class="small" style="color: #b7b6bb">2018 - 2021</div>
-                    <div class="large font-weight-bold mt-2" style="color: #FFFFFF;">D. Y. Patil College of Engineering,
+                    <div class="small" style="color: #b7b6bb">2022 - 2026</div>
+                    <div class="large font-weight-bold mt-2" style="color: #FFFFFF;">Savitribai Phule Pune University,
                         Pune</div>
                     <div class="small" style="color: #b7b6bb">Pune, Maharashtra</div>
                     <div class="font-weight-light mt-1" style="color: #7b7a7f">Bachelor of Engineering in Information
                         Technology</div>
                 </li>
                 <li class="list-group-item">
-                    <div class="small" style="color: #b7b6bb">2015 - 2018</div>
-                    <div class="large font-weight-bold mt-2" style="color: #FFFFFF;">Government Polytechnic, Jalgaon
+                    <div class="small" style="color: #b7b6bb">2020 - 2022</div>
+                    <div class="large font-weight-bold mt-2" style="color: #FFFFFF;">Govt. Mixed Hr. Sec. School (Migrant School), Jammu
                     </div>
-                    <div class="small" style="color: #b7b6bb">Jalgaon, Maharashtra</div>
-                    <div class="font-weight-light mt-1" style="color: #7b7a7f">Diploma in Information Technology</div>
+                    <div class="small" style="color: #b7b6bb">Jammu, Jammu and Kashmir</div>
+                    <div class="font-weight-light mt-1" style="color: #7b7a7f">Post-Marticulation in Science with Computer Science</div>
                 </li>
             </ul>
         </div>
