--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
                                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Google_%22G%22_logo.svg/768px-Google_%22G%22_logo.svg.png" width="78" />
                         </div>
                         <div class="col-auto">
-                            <div class="small" style="color: #b7b6bb">08/2021 - PRESENT</div>
-                            <div class="large font-weight-bold font-italic mt-2" style="color: #FFFFFF;">Category - Android</div>
+                            <div class="small" style="color: #b7b6bb">Dec 2022 - Aug 2023</div>
+                            <div class="large font-weight-bold font-italic mt-2" style="color: #FFFFFF;">Domain - WebDev and Git/Github</div>
                             <div class="large mt-2" style="color: #FFFFFF;"><a class="text-decoration-none"
-                                    href="https://g.dev/shreyaspatil" target="_blank">Google Developer Expert</a></div>
+                                    href="https://g.dev/shreyaspatil" target="_blank">Google Developer Students Club</a></div>
                         </div>
                     </div>
                 </li>
