--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             <div class="small" style="color: #b7b6bb">Dec 2022 - Aug 2023</div>
                             <div class="large font-weight-bold font-italic mt-2" style="color: #FFFFFF;">Domain - WebDev and Git/Github</div>
                             <div class="large mt-2" style="color: #FFFFFF;"><a class="text-decoration-none"
-                                    href="https://g.dev/shreyaspatil" target="_blank">Google Developer Students Club</a></div>
+                                    href="https://www.linkedin.com/company/dsc-sits/posts/?feedView=all" target="_blank">Google Developer Students Club</a></div>
                         </div>
                     </div>
                 </li>
@@ -184,13 +184,13 @@
                     <div class="row">
                         <div class="col-auto">
                             <img class="img m-2 pr-2 pl-2"
-                                src="https://pbs.twimg.com/profile_images/1361975143610806272/XvJlVRxW_400x400.jpg" width="78" />
+                                src="https://i.pinimg.com/564x/5b/94/4d/5b944d16a322de7088054de34665d48d.jpg" width="78" />
                         </div>
                         <div class="col-auto">
-                            <div class="small" style="color: #b7b6bb">11/2020 - PRESENT</div>
-                            <div class="large font-weight-bold font-italic mt-2" style="color: #FFFFFF;">Organizer</div>
+                            <div class="small" style="color: #b7b6bb">2016 - PRESENT</div>
+                            <div class="large font-weight-bold font-italic mt-2" style="color: #FFFFFF;">Artiste</div>
                             <div class="large mt-2" style="color: #FFFFFF;"><a class="text-decoration-none"
-                                    href="https://www.meetup.com/Kotlin-Mumbai/" target="_blank">Kotlin User Group: Mumbai</a></div>
+                                    href="" target="_blank">musical ensemble</a></div>
                         </div>
                     </div>
                 </li>
