--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <div class="row">
                         <div class="col-auto">
                             <img class="img m-2 pr-2 pl-2"
-                                src="blob:https://web.whatsapp.com/7e6aa06a-5ee1-4a5d-a7a5-333177a6b4b0" width="78" />
+                                src="https://i.pinimg.com/564x/8e/6b/de/8e6bde50bae118978c4cafbed5c3ea1d.jpg" width="78" />
                         </div>
                         <div class="col-auto">
                             <div class="small" style="color: #b7b6bb">2016 - PRESENT</div>
