--- a/index.html
+++ b/index.html
@@ -237,14 +237,6 @@
                     <div class="fab fa-java  p-0 m-1" style="font-size: 30px"></div>
                     <div class="font-weight-bold">Java</div>
                 </div>
-                <div class="skill" style="color: #cf4237">
-                    <div class="fas fa-code p-0 m-1" style="font-size: 30px"></div>
-                    <div class="font-weight-bold">Kotlin</div>
-                </div>
-                <div class="skill" style="color: #2099df">
-                    <div class="fas fa-code p-0 m-1" style="font-size: 30px"></div>
-                    <div class="font-weight-bold">Dart</div>
-                </div>
                 <div class="skill" style="color: #b2b200">
                     <div class="fab fa-js-square  p-0 m-1" style="font-size: 30px;"></div>
                     <div class="font-weight-bold">JavaScript</div>
@@ -263,28 +255,20 @@
                 </div>
                 <div class="skill" style="color: #597fb2">
                     <div class="fab fa-php  p-0 m-1" style="font-size: 30px;"></div>
-                    <div class="font-weight-bold">PHP</div>
+                    <div class="font-weight-bold">c++</div>
                 </div>
             </div>
 
-            <div class="h4 mt-4">Technologies/Frameworks:</div>
+            <div class="h4 mt-4">Development Environment/Frameworks:</div>
             <div class="row justify-content-center align-items-center" data-aos="fade-down" data-aos-easing="linear"
                 data-aos-duration="500">
                 <div class="skill" style="color: #29bf0f">
                     <div class="fab fa-android p-0 m-1" style="font-size: 30px"></div>
-                    <div class="font-weight-bold">Android</div>
+                    <div class="font-weight-bold">IntelliJIDEA</div>
                 </div>
                 <div class="skill" style="color: #0f96bf">
                     <div class="fas fa-mobile p-0 m-1" style="font-size: 30px"></div>
-                    <div class="font-weight-bold">Flutter</div>
-                </div>
-                <div class="skill" style="color: #cf4237">
-                    <div class="fas fa-code p-0 m-1" style="font-size: 30px"></div>
-                    <div class="font-weight-bold">Micronaut</div>
-                </div>
-                <div class="skill" style="color: #cf4237">
-                    <div class="fas fa-code p-0 m-1" style="font-size: 30px"></div>
-                    <div class="font-weight-bold">Ktor</div>
+                    <div class="font-weight-bold">SpringBoot</div>
                 </div>
                 <div class="skill" style="color: #00ff22">
                     <div class="fab fa-node p-0 m-1" style="font-size: 30px"></div>
@@ -292,7 +276,7 @@
                 </div>
                 <div class="skill" style="color: #32e0c4">
                     <div class="fab fa-python p-0 m-1" style="font-size: 30px"></div>
-                    <div class="font-weight-bold">Django</div>
+                    <div class="font-weight-bold">Selenium</div>
                 </div>
             </div>
 
@@ -309,7 +293,7 @@
                 </div>
                 <div class="skill" style="color: #FFA000">
                     <div class="fas fa-fire p-0 m-1" style="font-size: 30px"></div>
-                    <div class="font-weight-bold">Firebase</div>
+                    <div class="font-weight-bold">Microsoft SQL</div>
                 </div>
             </div>
 
@@ -330,7 +314,7 @@
                 </div>
                 <div class="skill" style="color: #FFA000">
                     <div class="fas fa-fire p-0 m-1" style="font-size: 30px"></div>
-                    <div class="font-weight-bold">Firebase</div>
+                    <div class="font-weight-bold">Azure</div>
                 </div>
                 <div class="skill" style="color: #FFA000">
                     <div class="fab fa-aws p-0 m-1" style="font-size: 30px"></div>
@@ -356,6 +340,14 @@
                 <div class="skill" style="color: #ffffff">
                     <div class="fas fa-palette p-0 m-1" style="font-size: 30px"></div>
                     <div class="font-weight-bold">UI/UX Designing</div>
+                     </div>
+                <div class="skill" style="color: #ffffff">
+                    <div class="fas fa-palette p-0 m-1" style="font-size: 30px"></div>
+                    <div class="font-weight-bold">MS-Excel</div>
+                     </div>
+                <div class="skill" style="color: #ffffff">
+                    <div class="fas fa-palette p-0 m-1" style="font-size: 30px"></div>
+                    <div class="font-weight-bold">Communication</div>
                 </div>
             </div>
         </div>
