--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="container-fluid d-block mx-auto text-center" style="width:fit-content;" data-aos="fade-up"
             data-aos-anchor-placement="top-bottom">
-            <a href="mailto: kapirathraina@gmail.com" href="#" class="far fa-envelope rounded-circle"></a>
+            <a href="mailto: kapirathraina@gmail.com" href="#" class="<i class="fa-light fa-circle-envelope"></a>
             <a href="https://x.com/kapsayshieeee" target="_blank"
                 class="fab fa-twitter rounded-circle"></a>
             <a href="https://www.instagram.com/ignaciowestttkappp/" target="_blank"
